# minfer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  benchmark.cpp  generate.cpp
include/minfer/base/: config.hpp  model.hpp  module.hpp  sampler.hpp  stats.hpp  tensor.hpp  tokenizer.hpp  types.hpp
include/minfer/config/: config.hpp  metal_config.hpp
include/minfer/interfaces/: metal_interface.hpp
include/minfer/models/qwen3/: model.hpp  module.hpp  tokenizer.hpp
include/minfer/ops/: cpu_ops.hpp  kernels.hpp
include/minfer/parsing/: gguf.hpp
includes/common/base/: model.hpp  module.hpp  sampler.hpp  tokenizer.hpp
includes/common/config/: config.hpp
includes/common/models/qwen3/: model.hpp  module.hpp  tokenizer.hpp
includes/tests/base/: test_base.hpp
includes/tests/ops/: test_attn.hpp  test_matmul.hpp  test_rmsnorm.hpp  test_rope.hpp  test_route.hpp  test_silu.hpp  test_softmax.hpp  test_swiglu.hpp
includes/tests/tokenizer/: test_tokenizer.hpp
python/: README.md  gpt2_convert.py  print_summary.py  pyproject.toml  summary.py
src/: CMakeLists.txt
src/base/: config.cpp  model.cpp  module.cpp  sampler.cpp  stats.cpp  tensor.cpp  tokenizer.cpp  types.cpp
src/common/: config.cpp  config.hpp  cpu_ops.cpp  gguf.cpp  gguf.hpp  model.cpp  model.hpp  module.cpp  module.hpp
src/common/base/: model.cpp  module.cpp  sampler.cpp  tokenizer.cpp
src/common/config/: config.cpp
src/common/models/qwen3/: model.cpp  module.cpp  tokenizer.cpp
src/common/ops/: cpu_ops.cpp
src/common/parsing/: gguf.cpp
src/config/: config.cpp  metal_config.mm
src/interfaces/: metal_interface.mm
src/models/qwen3/: model.cpp  module.cpp  tokenizer.cpp
src/ops/: cpu_ops.cpp  kernels.cpp  kernels.cu  kernels.metal
src/parsing/: gguf.cpp
src/tests/: loader.cpp
src/tests/base/: test_base.cpp
src/tests/generate/: generate.cpp
src/tests/ops/: test_attn.cpp  test_matmul.cpp  test_ops_main.cpp  test_rmsnorm.cpp  test_rope.cpp  test_route.cpp  test_silu.cpp  test_softmax.cpp  test_swiglu.cpp
src/tests/tokenizer/: test_tokenizer.cpp  test_tokenizer_main.cpp
tests/: CMakeLists.txt  test_ops.cpp  test_tokenizer.cpp
tests/cpu_ops/: CMakeLists.txt  test_cpu_ops.cpp
tests/include/cpu_ops/: test_matmul.hpp  test_route.hpp
tests/include/ops/: test_attn.hpp  test_matmul.hpp  test_rmsnorm.hpp  test_rope.hpp  test_silu.hpp  test_softmax.hpp  test_swiglu.hpp
tests/include/qwen3/tokenizer/: tokenizer.hpp
tests/qwen3/: CMakeLists.txt  test_metal.cpp  test_tokenizer.cpp
tests/src/base/: test_base.cpp
tests/src/cpu_ops/: test_attn.cpp  test_matmul.cpp  test_rmsnorm.cpp  test_rope.cpp  test_route.cpp  test_silu.cpp  test_softmax.cpp  test_swiglu.cpp
tests/src/ops/: test_attn.cpp  test_matmul.cpp  test_rmsnorm.cpp  test_rope.cpp  test_route.cpp  test_silu.cpp  test_softmax.cpp  test_swiglu.cpp
tests/src/qwen3/tokenizer/: tokenizer.cpp
tests/src/tokenizer/: test_tokenizer.cpp
